--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Gross Domestic Product Bar charset</title>
     </head>
     <body>
-        
+        <h1 id="title"></h1>
+        <svg></svg>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
