Added css and js files.  Wrote initial fetch request and checked it works.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Gross Domestic Product Bar charset</title>
+        <link type="text/css" href=".index.css">
     </head>
     <body>
         <h1 id="title"></h1>
-        <svg></svg>
+        <svg id="chart"></svg>
+        <div id="dummy"></div>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
