--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Gross Domestic Product Bar charset</title>
-        <link type="text/css" href=".index.css">
+        <link rel="stylesheet" type="text/css" href="./index.css">
     </head>
     <body>
-        <h1 id="title"></h1>
-        <svg id="chart"></svg>
-        <div id="dummy"></div>
+        <main id="main">
+
+                <h1 id="title">United States GDP (in Billions)</h1>
+                <svg id="chart"></svg>
+
+        </main>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <script src="./index.js"></script>
