--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     </head>
     <body>
         <main id="main">
-            
+            <section>
                 <h1 id="title">United States GDP (in Billions)</h1>
                 <div id="overlay">
                     <svg id="chart"></svg>
                 </div>
+            </section>
         </main>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
